1.0.0
 * Support aggregated consistency validation for multiple clusters (CASSANDRA-19933)
 * Add transport extension for coordinated write (CASSANDRA-19923)
 * Support data partitioning for multiple clusters coordinated write (CASSANDRA-19910)
 * Add writer option COORDINATED_WRITE_CONFIG to define coordinated write to multiple Cassandra clusters (CASSANDRA-19909)
 * Decouple Cassandra types from Spark types so Cassandra types can be used independently from Spark (CASSANDRA-19815)
 * Make the compression cache configurable to reduce heap pressure for large SSTables (CASSANDRA-19900)
 * Refactor TokenRangeMapping to use proper types instead of Strings (CASSANDRA-19901)
 * Removes checks for blocked instances from bulk-write path (CASSANDRA-19873)
 * Fix consistency level check for write (CASSANDRA-19842)
 * Fix NPE when writing UDT values (CASSANDRA-19836)
 * Add job_timeout_seconds writer option (CASSANDRA-19827)
 * Prevent double closing sstable writer (CASSANDRA-19821)
 * Stream sstable eagerly when bulk writing to reclaim local disk space sooner (CASSANDRA-19806)
 * Split the Cassandra type logic out from CassandraBridge into a separate module (CASSANDRA-19793)
 * Remove other uses of Apache Commons lang for hashcode, equality and random string generation (CASSANDRA-19791)
 * Split out BufferingInputStream stats into separate interface (CASSANDRA-19778)
 * Bump Sidecar version to 55a9efee (CASSANDRA-19774)
 * Add new module cassandra-analytics-common to store common code with minimal dependencies (CASSANDRA-19748)
 * Bulk writer fails validation stage when writing to a cluster using RandomPartitioner (CASSANDRA-19727)
 * Invalid mapping when timestamp is used as a partition key during bulk writes (CASSANDRA-19716)
 * NullPointerException when reading static column with null values (CASSANDRA-19626)
 * Integrate with the latest sidecar client (CASSANDRA-19616)
 * Support bulk write via S3 (CASSANDRA-19563)
 * Support UDTs in the Bulk Writer (CASSANDRA-19340)