@@ -1,4 +1,5 @@
 1.0.0
+ * Add dataTransferApi and TwoPhaseImportCoordinator for coordinated write (CASSANDRA-19994)
  * Support aggregated consistency validation for multiple clusters (CASSANDRA-19933)
  * Add transport extension for coordinated write (CASSANDRA-19923)
  * Support data partitioning for multiple clusters coordinated write (CASSANDRA-19910)
